# neocortex

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  KNOWLEDGE-BASE-DESIGN.md  LICENSE  README.md  README.zh-CN.md  TODOS.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  CLIENT_PROPOSAL.md  COMMANDS.md  EXPANSION-WIKI-COMPILE.md  RESEARCH.md  SERVER.md  VISION.md
docs/reviews/: 2026-07-10-review-loop-acceptance.md  2026-07-10-review-slices-multi-review.md  2026-07-11-p0-daily-action-loop-server.md
scripts/: clean_existing.py  fix_titles.py  migrate_clips.py  polish_clips.py  retranslate_clips.py  retranslate_v2.py
src/neocortex/: __init__.py  _async.py  asker.py  cli.py  clipper.py  cmd_clip.py  cmd_compile.py  cmd_daily.py  cmd_explore.py  cmd_feed.py  cmd_import.py  cmd_knowledge.py  cmd_learn.py  cmd_lint.py  cmd_read.py  cmd_research.py  cmd_scan.py  cmd_search.py  cmd_serve.py  cmd_verify.py  cmd_visualize.py  compiler.py  config.py  converger.py  decay.py  dedup.py  discovery.py  explorer.py  feeder.py  growth.py  i18n.py  linter.py  models.py  planner.py  prober.py  recommender.py  researcher.py  reviewer.py  scan_cache.py  search.py  (+3 more)
src/neocortex/importer/: __init__.py  chatgpt.py  claude.py  extractor.py  merger.py
src/neocortex/llm/: __init__.py  anthropic.py  base.py  google.py  openai_compat.py
src/neocortex/matcher/: __init__.py  (+2 more)
tests/: conftest.py  test_asker.py  test_claims.py  test_cli_registration.py  test_clip.py  test_closed_loop.py  test_cmd_clip.py  test_cmd_read.py  test_compiler.py  test_config.py  test_converger.py  test_decay.py  test_dedup.py  test_e2e_closed_loop.py  test_explorer.py  test_feeder.py  test_fetcher_new.py  test_flashcard_layers.py  test_gap_synonyms.py  test_github.py  test_growth.py  test_importer.py  test_inbox_daily.py  test_learning_path.py  test_linter.py  test_matcher.py  test_planner.py  test_prober.py  test_reader.py  test_recommender.py  test_reflection.py  test_researcher.py  test_review_api.py  test_review_service.py  test_reviewer.py  test_scan_cache.py  test_scan_reflect.py  test_scanner.py  test_search.py  test_semantic.py  (+10 more)
(+39 files in other folders)
