[project]
name = "neocortex-ai"
version = "0.1.0"
description = "AI-powered developer skill analyzer & personalized learning assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    # CLI
    "typer>=0.15.0",
    "rich>=13.0.0",

    # LLM Providers
    "anthropic>=0.52.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",

    # Content Fetching
    "httpx[socks]>=0.28.0",
    "readability-lxml>=0.8.0",
    "pymupdf>=1.25.0",
    "ebooklib>=0.18",
    "markdownify>=0.14.1",

    # TTS
    "edge-tts>=6.1.0",

    # CLI UX
    "InquirerPy>=0.3.0",

    # Utilities
    "tiktoken>=0.8.0",
    "cryptography>=44.0.0",
    "pydantic>=2.0.0",
    "feedparser>=6.0.0",
    "ddgs>=9.0.0",

    # Embedding / Semantic Search
    "fastembed>=0.4.0",

    # Local HTTP server (Sprint 0 — for GUI clients via loopback API)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
neocortex = "neocortex.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neocortex"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
